--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function get_cookie(cookie_name) { const value = "; " + document.cookie; const p
 <div class="title">
     <h1 id="title1">Debbies web-proxy</h1>
 </div>
-<title>Debbies-WP-UB</title>
+<title>Zen proxy site</title>
 
 <form class="searchbox" id="searchbox">
     <input id="searchengine" value="" type="hidden"/>
